# bazed

./: Cargo.toml  LICENSE-MIT  deny.toml  flake.nix  package-lock.json  package.json  readme.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yaml
bazed-gluon/: README.md  index.js  package-lock.json  package.json
crates/bazed/: Cargo.toml
crates/bazed-core/: Cargo.toml
crates/bazed-core/src/: app.rs  buffer.rs  document.rs  highlighting.rs  input_mapper.rs  lib.rs  mark.rs  marked_rope.rs  region.rs  test_util.rs  user_buffer_op.rs  view.rs  vim_interface.rs  word_boundary.rs
crates/bazed-core/src/buffer/: buffer_regions.rs  movement.rs  position.rs  regex_cursor.rs  undo_history.rs
crates/bazed-input-mapper/: Cargo.toml
crates/bazed-input-mapper/src/: input_event.rs  key_combo.rs  keymap.rs  lib.rs
crates/bazed-rpc/: Cargo.toml
crates/bazed-rpc/src/: core_proto.rs  keycode.rs  lib.rs  server.rs
crates/bazed-stew/: Cargo.toml
crates/bazed-stew-interface/: Cargo.toml
crates/bazed-stew-interface/src/: elk_of_implementation.rs  foo.rs  ipc_connection.rs  lib.rs  rpc_proto.rs  stew_rpc.rs
crates/bazed-stew-macros/: Cargo.toml
crates/bazed-stew-macros/src/: lib.rs  utils.rs
crates/bazed-stew/src/: executable.rs  lib.rs
crates/bazed-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/bazed-tauri/src/: lib.rs
crates/bazed-tauri/svelte/: package-lock.json  package.json  svelte.config.js
crates/bazed-tauri/svelte/src/lib/: Rekuho.svelte  event.ts  theme.ts
crates/bazed/src/: main.rs
crates/bazed/tests/it/: external.rs
crates/copilot-impl/: Cargo.toml
crates/copilot-impl/src/: main.rs
crates/copilot-interface/: Cargo.toml
crates/copilot-interface/src/: lib.rs
crates/copilot/src/: main.rs
crates/example-plugin-impl/: Cargo.toml
crates/example-plugin-impl/src/: main.rs
crates/example-plugin-interface/: Cargo.toml
crates/example-plugin-interface/src/: lib.rs
node_packages/bazed-gluon/: .gitignore  README.md  index.js  package.json
node_packages/bazed-svelte/: .eslintrc.cjs  package.json  svelte.config.js
node_packages/bazed-svelte/src/lib/: Bazed.svelte  Portion.svelte  Rekuho.svelte  Welcome.svelte  common.ts  core.ts  event.ts  log.ts  rpc.ts
node_packages/bazed-svelte/src/lib/theme/: kanagawa.ts
node_packages/bazed-svelte/src/routes/: +page.svelte
rekuho/: .prettierrc.yaml  README.md  package-lock.json  package.json  svelte.config.js
rekuho/src/: app.d.ts  app.html  index.test.ts
rekuho/src/lib/: Core.ts  Cursors.svelte  LinearAlgebra.ts  LinesView.svelte  Portion.svelte  PortionView.svelte  Rekuho.svelte  Rpc.ts  Theme.ts  Welcome.svelte  common.ts  config.ts  core.ts  event.ts  font.ts  kanagawa.js  linearAlgebra.ts  rpc.ts  theme.ts
rekuho/src/routes/: +page.svelte
