[workspace]
members = [ "crates/*" ]

[workspace.package]
authors = [
    "ElKowar <5300871+elkowar@users.noreply.github.com>",
    "Charlotte Meyer <dev@buffet.sh>",
    "Pedro Burgos <druskus20@gmail.com>",
    "cpli <dev@cpli.in>",
]
categories = ["text-processing"]
keywords = ["editor"]
homepage = "https://github.com/bazed-editor/bazed"
repository = "https://github.com/bazed-editor/bazed"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
color-eyre = { version = "0.6.2", default-features = false }
uuid = { version = "1.2.2", features = ["v4"] }
thiserror = "1.0.37"

[profile.release]
codegen-units = 1
lto = true
