[workspace]
members = [ "crates/*" ]

[workspace.package]
authors = [
    "ElKowar <5300871+elkowar@users.noreply.github.com>",
    "Niclas Meyer <niclas@countingsort.com>",
    "Pedro Burgos <druskus20@gmail.com>",
    "cpli <dev@cpli.in>",
]
categories = ["text-processing"]
keywords = ["editor"]
homepage = "https://github.com/bazed-editor/bazed"
repository = "https://github.com/bazed-editor/bazed"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
tracing = "0.1.37"

color-eyre = { version = "0.6.2" }
thiserror = "1.0.37"

serde_json = "1.0.89"
serde = { version = "1.0.151", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
derive_more = { version = "0.99.17", features = ["into", "display"] }

futures = { version = "0.3.25", default-features = false, features = ["std"] }
tokio = { version = "1.23.0", features = ["rt", "net", "macros", "time", "sync"] }

bazed-rpc = { path = "crates/bazed-rpc", version = "0.0.0" }
bazed-core = { path = "crates/bazed-core", version = "0.0.0" }

[workspace.dependencies.tracing-subscriber]
version = "0.3.16"
default-features = false
features = [
    "ansi",
    "fmt",
    "smallvec",
    "std",
]

[profile.release]
codegen-units = 1
lto = true
