[workspace]
members = [ "crates/*" ]

[workspace.package]
authors = [
    "ElKowar <5300871+elkowar@users.noreply.github.com>",
    "Charlotte Meyer <dev@buffet.sh>",
    "Pedro Burgos <druskus20@gmail.com>",
    "cpli <dev@cpli.in>",
]
categories = ["text-processing"]
keywords = ["editor"]
homepage = "https://github.com/bazed-editor/bazed"
repository = "https://github.com/bazed-editor/bazed"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
tracing = "0.1.37"

color-eyre = { version = "0.6.2" }
thiserror = "1.0.37"

serde_json = "1.0.89"
serde = { version = "1.0.151", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
derive_more = { version = "0.99.17", features = ["into", "display"] }
maplit = "1.0.2"
tap = "1.0.1"
unicode-general-category = "0.6.0"
nonempty = "0.8.1"

futures = { version = "0.3.25", default-features = false, features = ["std"] }
tokio = { version = "1.23.0", features = ["rt", "net", "macros", "time", "sync"] }

bazed-rpc = { path = "crates/bazed-rpc", version = "0.0.0" }
bazed-core = { path = "crates/bazed-core", version = "0.0.0" }
bazed-tauri = { path = "crates/bazed-tauri", version = "0.0.0" }
bazed-event-system = { path = "crates/bazed-event-system", version = "0.0.0" }
bazed-input-mapper = { path = "crates/bazed-input-mapper", version = "0.0.0" }

[workspace.dependencies.tracing-subscriber]
version = "0.3.16"
default-features = false
features = [
    "ansi",
    "fmt",
    "smallvec",
    "std",
    "env-filter",
    "registry",
]




[profile.release]
codegen-units = 1
lto = true
