[package]
name = "bazed-core"
version = "0.0.0"
edition = "2021"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
xi-rope = "0.3.0"
nonempty = "0.8.1"
color-eyre.workspace = true
uuid.workspace = true
thiserror.workspace = true
bazed-rpc.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
derive_more.workspace = true
maplit.workspace = true
tap.workspace = true
