[package]
name = "bazed-core"
version = "0.0.0"
edition = "2021"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
syntect = "5.0.0"
xi-rope = { package = "lapce-xi-rope", version = "0.3.1" }
unicode-general-category.workspace = true
hotsauce = "0.1.0"
nonempty.workspace = true
color-eyre.workspace = true
uuid.workspace = true
thiserror.workspace = true
bazed-rpc.workspace = true
bazed-input-mapper.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
derive_more.workspace = true
maplit.workspace = true
tap.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
pretty_assertions.workspace = true
