[package]
name = "bazed-rpc"
version = "0.0.0"
edition = "2021"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.18.0"
tracing.workspace = true
