[package]
name = "bazed-stew-macros"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["full"] }
quote = "1.0.23"
proc-macro2 = "1.0.51"
proc-macro-error = "1.0.4"
darling = { version = "0.14.3" }
