[package]
name = "bazed-stew-macros"
version = "0.0.0"
edition = "2021"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["extra-traits"] }
quote = "1.0.23"
proc-macro2 = "1.0.51"
proc-macro-error = "1.0.4"
darling = { version = "0.14.4" }
