[package]
name = "bazed-stew"
version = "0.0.0"
edition = "2021"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
interprocess.workspace = true
parking_lot.workspace = true
uuid.workspace = true
dashmap.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
bazed-stew-interface.workspace = true
semver.workspace = true
blocking.workspace = true
