[package]
name = "bazed-tauri"
version = "0.0.0"
edition = "2021"
# TODO do a PR to tauri_build to fix it not supporting cargo workspaces
# Then we should be able to do the workspace inheritance thing here as well
authors = [
    "ElKowar <5300871+elkowar@users.noreply.github.com>",
    "Niclas Meyer <niclas@countingsort.com>",
    "Pedro Burgos <druskus20@gmail.com>",
    "cpli <dev@cpli.in>",
]
categories = ["text-processing"]
keywords = ["editor"]
homepage = "https://github.com/bazed-editor/bazed"
repository = "https://github.com/bazed-editor/bazed"
license = "Apache-2.0 OR MIT"
build = "build.rs"


[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
