[package]
name = "bazed"
version = "0.0.0"
edition = "2021"
description = "The bazed editor"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bazed-core.workspace = true
tokio.workspace = true
color-eyre.workspace = true
bazed-tauri = { workspace = true, optional = true }
tracing.workspace = true

tracing-error = "0.2.0"
tracing-subscriber.workspace = true

[features]
default = ["tauri"]
tauri = ["bazed-tauri"]
